--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 ">
 <html>
 <head>
-  <title>>Manifesto for Creating Decision Logs
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99025862-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-99025862-3');
+</script>
+
+  <title>Manifesto for Creating Decision Logs
   </title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <META name="description" content="We are uncovering better ways of documenting decisions
