--- a/index.html
+++ b/index.html
@@ -1,82 +1,90 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN
 ">
 <html>
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-99025862-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-99025862-3');
-</script>
-
-  <title>Manifesto for Creating Decision Logs
+  <title>>Manifesto for Creating Decision Logs
   </title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <META name="description" content="We are uncovering better ways of documenting decisions
 by doing it and helping others do it.
 Through this work we have come to value:
 ">
   <META name="keywords" content="decision log, decision log manifesto
 ">
+  <style type="text/css">
+
+    .footer {
+      font-size: small;
+      color: gray;
+    }
+
+    body {
+      text-align: center;
+    }
+
+    .medium {
+      font-size: x-large;
+    }
+
+    .prefer {
+      font-size: xx-large;
+    }
+
+    h1 {
+      padding-top: 90px;
+      padding-bottom: 60px;
+    }
+
+    .contributors {
+      font-size: x-large;
+      padding-top: 40px;
+    }
+
+    .multiline {
+      white-space: pre-wrap;
+    }
+
+  </style>
 </head>
-<body >
-<center>
-  <br><br><br><br>
+<body>
 
-  <h1>Manifesto for Creating Decision Logs
-  </h1>
-  <br><br><br>
+<h1>Manifesto for Decision Logs</h1>
 
-  <p>
-
-    <font size="+2">
-      We are uncovering better ways of documenting decisions</br>
-      by doing it and helping others do it.</br>
-      Through this work we have come to value:
-    </font>
-
-  <p>
-    <font size="+2"></font><font size="+3">Researching options </font><font size="+2">over repeating decesions of the past<br></font>
-    <font size="+2"></font><font size="+3">Business value </font><font size="+2">over doing things for for the joy of doing it<br></font>
-    <font size="+2"></font><font size="+3">Cost-benefit analysis </font><font size="+2">over over politics or personal preferences<br></font>
-    <font size="+2"></font><font size="+3">Summary table </font><font size="+2">over lengthy essays<br></font>
-    <font size="+2"></font><font size="+3">Central decisions registry </font><font size="+2">over storing decisions in code or email<br></font>
-    <font size="+2"></font><font size="+3">Re evaluating decisions </font><font size="+2">over following old habits <br></font>
+<p class="medium multiline">
+  We are uncovering better ways of documenting decisions
+  by doing it and helping others do it.
+  Through this work we have come to value:
+</p>
 
 
-  <p>
-    <font size="+2">
-      That is, while there is value in the items on<br>
-      the right, we value the items on the left more.<br>
-
-    </font>
-    <br><br><br><br>
-
-  <table cellpadding=15><tr align=center valign=top>
-    <td><font size="+2">
-    <td><font size="+2">
-      Peter Szanto</br>
-      Gabor Nagypal</br>
-    </font></td>
-
-    <td><font size="+2">
+<p>
+  <span class="prefer">Researching options </span><span class="medium">over re-applying decisions of the past</span><br/>
+  <span class="prefer">Business value </span><span
+  class="medium">over doing things for for the joy of doing it</span><br/>
+  <span class="prefer">Cost-benefit analysis </span><span class="medium">over over politics and personal
+  preferences<br></span>
+  <span class="prefer">Summary table </span><span class="medium">over lengthy essays<br></span>
+  <span class="medium"></span><span class="prefer">Central decisions registry </span><span class="medium">over storing decisions in
+  code or email<br></span>
+  <span class="prefer">Re evaluating decisions </span><span class="medium">fear of change
+  <br></span>
 
 
-    </font></td>
+<p class="medium multiline">That is, while there is value in the items on
+the right, we value the items on the left more.
+</p>
 
-    <td><font size="+2">
-    </font>
-    </td>
-</tr></table>
-      <font size=1 color=gray>
-        &copy; 2019, the above authors<br>
-        this declaration may be freely copied in any form, <br>
-        but only in its entirety through this notice.
-      </font>
+
+<p class="contributors multiline">
+  <a href="https://www.linkedin.com/in/peterszanto/">Peter Szanto</a>
+  <a href="https://www.linkedin.com/in/nagypalg/">Gabor Nagypal</a>
+</p>
+
+<p class="footer multiline">
+  &copy; 2019, the above authors
+  this declaration may be freely copied in any form,
+  but only in its entirety through this notice.
+</p>
 
 
 </body>
