--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Through this work we have come to value:
 
     h1 {
       padding-top: 90px;
-      padding-bottom: 60px;
+      padding-bottom: 50px;
     }
 
     .contributors {
@@ -63,10 +63,10 @@ Through this work we have come to value:
   class="medium">over doing things for for the joy of doing it</span><br/>
   <span class="prefer">Cost-benefit analysis </span><span class="medium">over over politics and personal
   preferences<br></span>
-  <span class="prefer">Summary table </span><span class="medium">over lengthy essays<br></span>
+  <span class="prefer">Summary table </span><span class="medium">over lengthy essay<br></span>
   <span class="medium"></span><span class="prefer">Central decisions registry </span><span class="medium">over storing decisions in
   code or email<br></span>
-  <span class="prefer">Re evaluating decisions </span><span class="medium">fear of change
+  <span class="prefer">Re evaluating decisions </span><span class="medium">over fear of change
   <br></span>
 
 
