--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ Through this work we have come to value:
 <p>
   <span class="prefer">Evaluating alternatives </span><span class="medium">over choosing the default option</span><br/>
   <span class="prefer">Business value </span><span
-  class="medium">over doing things for for the joy of doing it</span><br/>
+  class="medium">over doing things for the joy of doing it</span><br/>
   <span class="prefer">Cost-benefit analysis </span><span class="medium">over over politics and personal
   preferences<br></span>
   <span class="prefer">Comparision table </span><span class="medium">over lengthy essay<br></span>
   <span class="medium"></span><span class="prefer">Central decisions registry </span><span class="medium">over storing decisions in
   code or email<br></span>
-  <span class="prefer">Re evaluating decisions </span><span class="medium">over fear of challenging the status-quo
+  <span class="prefer">Re-evaluating decisions </span><span class="medium">over fear of challenging the status-quo
   <br></span>
 
 
