--- a/index.html
+++ b/index.html
@@ -1,91 +1,71 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN
-">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN ">
 <html>
-<head>
-  <title>>Manifesto for Creating Decision Logs
-  </title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <META name="description" content="We are uncovering better ways of documenting decisions
+  <head>
+    <title>>Manifesto for Creating Decision Logs</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta
+      name="description"
+      content="We are uncovering better ways of documenting decisions
 by doing it and helping others do it.
 Through this work we have come to value:
-">
-  <META name="keywords" content="decision log, decision log manifesto
-">
-  <style type="text/css">
+"
+    />
+    <meta
+      name="keywords"
+      content="decision log, decision log manifesto
+"
+    />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <style type="text/css"></style>
+  </head>
+  <body>
+    <h1>Manifesto for Decision Logs</h1>
 
-    .footer {
-      font-size: small;
-      color: gray;
-    }
+    <p class="medium multiline">
+      We are uncovering better ways of documenting decisions by doing it and
+      helping others do it. Through this work we have come to value:
+    </p>
 
-    body {
-      text-align: center;
-    }
+    <p>
+      <span class="prefer">Evaluating alternatives </span
+      ><span class="medium">over choosing the default option</span><br />
+      <span class="prefer">Business value </span
+      ><span class="medium">over doing things for the joy of doing it</span
+      ><br />
+      <span class="prefer">Cost-benefit analysis </span
+      ><span class="medium"
+        >over over politics and personal preferences<br
+      /></span>
 
-    .medium {
-      font-size: x-large;
-    }
+      <span class="prefer">Comparision table </span
+      ><span class="medium">over lengthy essay<br /></span>
+      <span class="medium"></span
+      ><span class="prefer">Central decisions registry </span
+      ><span class="medium">over storing decisions in code or email<br /></span>
 
-    .prefer {
-      font-size: xx-large;
-    }
+      <span class="prefer">Re-evaluating decisions </span
+      ><span class="medium"
+        >over fear of challenging the status-quo <br
+      /></span>
+    </p>
 
-    h1 {
-      padding-top: 90px;
-      padding-bottom: 50px;
-    }
+    <p class="medium multiline">
+      That is, while there is value in the items on the right, we value the
+      items on the left more.
+    </p>
 
-    .contributors {
-      font-size: x-large;
-      padding-top: 40px;
-    }
+    <p class="contributors multiline">
+      <a href="https://www.linkedin.com/in/peterszanto/">Peter Szanto</a>
+      <a href="https://www.linkedin.com/in/nagypalg/">Gabor Nagypal</a>
+    </p>
 
-    .multiline {
-      white-space: pre-wrap;
-    }
+    <p class="footer multiline">
+      &copy; 2019, the above authors this declaration may be freely copied in
+      any form, but only in its entirety through this notice.
+    </p>
 
-  </style>
-</head>
-<body>
-
-<h1>Manifesto for Decision Logs</h1>
-
-<p class="medium multiline">
-  We are uncovering better ways of documenting decisions
-  by doing it and helping others do it.
-  Through this work we have come to value:
-</p>
-
-
-<p>
-  <span class="prefer">Evaluating alternatives </span><span class="medium">over choosing the default option</span><br/>
-  <span class="prefer">Business value </span><span
-  class="medium">over doing things for the joy of doing it</span><br/>
-  <span class="prefer">Cost-benefit analysis </span><span class="medium">over over politics and personal
-  preferences<br></span>
-  <span class="prefer">Comparision table </span><span class="medium">over lengthy essay<br></span>
-  <span class="medium"></span><span class="prefer">Central decisions registry </span><span class="medium">over storing decisions in
-  code or email<br></span>
-  <span class="prefer">Re-evaluating decisions </span><span class="medium">over fear of challenging the status-quo
-  <br></span>
-
-
-<p class="medium multiline">That is, while there is value in the items on
-the right, we value the items on the left more.
-</p>
-
-
-<p class="contributors multiline">
-  <a href="https://www.linkedin.com/in/peterszanto/">Peter Szanto</a>
-  <a href="https://www.linkedin.com/in/nagypalg/">Gabor Nagypal</a>
-</p>
-
-<p class="footer multiline">
-  &copy; 2019, the above authors
-  this declaration may be freely copied in any form,
-  but only in its entirety through this notice.
-</p>
-
-
-</body>
+    <p class="medium">
+      <a href="principles.html">Principles of maintaining a decision log</a>
+    </p>
+  </body>
 </html>
