--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ Through this work we have come to value:
       ><br />
       <span class="prefer">Cost-benefit analysis </span
       ><span class="medium"
-        >over over politics and personal preferences<br
+        >over politics and personal preferences<br
       /></span>
 
-      <span class="prefer">Comparision table </span
+      <span class="prefer">Comparison table </span
       ><span class="medium">over lengthy essay<br /></span>
       <span class="medium"></span
       ><span class="prefer">Central decisions registry </span
