--- a/principles.html
+++ b/principles.html
@@ -17,14 +17,13 @@
     <h1>Principles of maintaining a decision log</h1>
 
     <p class="multiline">
-      Decision logs shoud be in an easy to access shared location, e.g.: Dropbox, OneDrive, Google Drive, Sharepoint or Confluence
-      
+      Decision logs should be in an easy to access shared location, e.g.: Dropbox, OneDrive, Google Drive, Sharepoint Confluence or similar
     </p>
     <h2>Structure of a decision log</h2>
     <h3>Owner</h3>
     Peter, John, Sally
     <h3>Purpose</h3>
-    Find  the best blah to keep our competitive advanage
+    Find  the best blah to keep our competitive advantage
     <h3>Comparison</h3>
     <p>
       <table class="center">
