--- a/principles.html
+++ b/principles.html
@@ -16,14 +16,18 @@
   <body class="medium">
     <h1>Principles of maintaining a decision log</h1>
 
-    <p class="multiline">
-      Decision logs should be in an easy to access shared location, e.g.: Dropbox, OneDrive, Google Drive, Sharepoint Confluence or similar
+    <p class="multiline principle">
+      Decision logs should be in an easy to access shared location, 
+      e.g.: Dropbox, OneDrive, Google Drive, Sharepoint Confluence or similar
     </p>
-    <p class="multiline">
-      The main audience of the decision log is the author. By the time it is written the author will have a really good understanding of the subject.
+    <p class="multiline principle">
+      The main audience of the decision log is the author. 
+      By the time it is written the author will have a really
+      good understanding of the subject.
     </p>
-    <p class="multiline">
-      The secondary audience of the decision log is anyone reading it. Be realistic the longer, more detailed it is, the less likely people will read it.
+    <p class="multiline principle">
+      The secondary audience of the decision log is anyone reading it. 
+      Be realistic, the longer, more detailed it is, the less likely people will read it.
     </p>
     <h2>Structure of a decision log</h2>
     <h3>Owner</h3>
