business value update

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ Through this work we have come to value:
     <p>
       <span class="prefer">Evaluating alternatives </span
       ><span class="medium">over choosing the default option</span><br />
-      <span class="prefer">Business value </span
-      ><span class="medium">over doing things for the joy of doing it</span
+      <span class="prefer">Delivering business value </span
+      ><span class="medium">over crafting exciting solutions</span
       ><br />
       <span class="prefer">Cost-benefit analysis </span
       ><span class="medium"
