--- a/index.html
+++ b/index.html
@@ -1,71 +1,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN ">
 <html>
-  <head>
-    <title>>Manifesto for Creating Decision Logs</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta
-      name="description"
-      content="We are uncovering better ways of documenting decisions
+
+<head>
+  <title>>Manifesto for Creating Decision Logs</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="description" content="We are uncovering better ways of documenting decisions
 by doing it and helping others do it.
 Through this work we have come to value:
-"
-    />
-    <meta
-      name="keywords"
-      content="decision log, decision log manifesto
-"
-    />
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <style type="text/css"></style>
-  </head>
-  <body>
-    <h1>Manifesto for Decision Logs</h1>
+" />
+  <meta name="keywords" content="decision log, decision log manifesto
+" />
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <style type="text/css"></style>
+</head>
 
-    <p class="medium multiline">
-      We are uncovering better ways of documenting decisions by doing it and
-      helping others do it. Through this work we have come to value:
-    </p>
+<body>
+  <h1>Manifesto for Decision Logs</h1>
 
-    <p>
-      <span class="prefer">Evaluating alternatives </span
-      ><span class="medium">over choosing the default option</span><br />
-      <span class="prefer">Delivering business value </span
-      ><span class="medium">over crafting exciting solutions</span
-      ><br />
-      <span class="prefer">Cost-benefit analysis </span
-      ><span class="medium"
-        >over politics and personal preferences<br
-      /></span>
+  <p class="medium multiline">
+    We are uncovering better ways of documenting decisions by doing it and
+    helping others do it. Through this work we have come to value:
+  </p>
 
-      <span class="prefer">Comparison table </span
-      ><span class="medium">over lengthy essay<br /></span>
-      <span class="medium"></span
-      ><span class="prefer">Central decisions registry </span
-      ><span class="medium">over storing decisions in code or email<br /></span>
+  <p>
+    <span class="prefer">Evaluating alternatives </span><span class="medium">over choosing the default
+      option</span><br />
+    <span class="prefer">Delivering business value </span><span class="medium">over crafting exciting
+      solutions</span><br />
+    <span class="prefer">Cost-benefit analysis </span><span class="medium">over politics and personal
+      preferences<br /></span>
 
-      <span class="prefer">Re-evaluating decisions </span
-      ><span class="medium"
-        >over fear of challenging the status-quo <br
-      /></span>
-    </p>
+    <span class="prefer">Comparison table </span><span class="medium">over unstructured summary<br /></span>
+    <span class="medium"></span><span class="prefer">Central decision registry </span><span class="medium">over storing
+      decisions in code or email<br /></span>
 
-    <p class="medium multiline">
-      That is, while there is value in the items on the right, we value the
-      items on the left more.
-    </p>
+    <span class="prefer">Re-evaluating decisions </span><span class="medium">over fear of challenging the status-quo
+      <br /></span>
+  </p>
 
-    <p class="contributors multiline">
-      <a href="https://www.linkedin.com/in/peterszanto/">Peter Szanto</a>
-      <a href="https://www.linkedin.com/in/nagypalg/">Gabor Nagypal</a>
-    </p>
+  <p class="medium multiline">
+    That is, while there is value in the items on the right, we value the
+    items on the left more.
+  </p>
 
-    <p class="footer multiline">
-      &copy; 2019, the above authors this declaration may be freely copied in
-      any form, but only in its entirety through this notice.
-    </p>
+  <p class="contributors multiline">
+    <a href="https://www.linkedin.com/in/peterszanto/">Peter Szanto</a>
+    <a href="https://www.linkedin.com/in/nagypalg/">Gabor Nagypal</a>
+  </p>
 
-    <p class="medium">
-      <a href="principles.html">Principles of maintaining a decision log</a>
-    </p>
-  </body>
+  <p class="footer multiline">
+    &copy; 2019, the above authors this declaration may be freely copied in
+    any form, but only in its entirety through this notice.
+  </p>
+
+  <p class="medium">
+    <a href="principles.html">Principles of maintaining a decision log</a>
+  </p>
+</body>
+
 </html>
