--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@ Through this work we have come to value:
   <p>
     <span class="prefer">Evaluating alternatives </span><span class="medium">over choosing the default
       option</span><br />
-    <span class="prefer">Delivering business value </span><span class="medium">over crafting exciting
-      solutions</span><br />
+    <span class="prefer">Understanding the big picture </span><span class="medium">over being lost in the details</span><br />
     <span class="prefer">Cost-benefit analysis </span><span class="medium">over politics and personal
       preferences<br /></span>
 
     <span class="prefer">Comparison table </span><span class="medium">over unstructured summary<br /></span>
-    <span class="medium"></span><span class="prefer">Central decision registry </span><span class="medium">over storing
-      decisions in code or email<br /></span>
+    <span class="medium"></span><span class="prefer">Central decision registry </span><span class="medium">over keeping
+      decisions in  emails<br /></span>
 
     <span class="prefer">Re-evaluating decisions </span><span class="medium">over fear of challenging the status-quo
       <br /></span>
