--- a/principles.html
+++ b/principles.html
@@ -29,6 +29,10 @@
       The secondary audience of the decision log is anyone reading it. 
       Be realistic, the longer, more detailed it is, the less likely people will read it.
     </p>
+    <p class="multiline principle">
+      The simples way to select the winning option is to choose the one with the most positive result.
+      If required a scoring system can be introduced with different weight per criteria.
+    </p>
     <h2>Structure of a decision log</h2>
     <h3>Owner</h3>
     Peter, John, Sally
