--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ Through this work we have come to value:
 
     <span class="prefer">Comparison table </span><span class="medium">over unstructured summary<br /></span>
     <span class="medium"></span><span class="prefer">Central decision registry </span><span class="medium">over keeping
-      decisions in  emails<br /></span>
+      decisions in emails<br /></span>
 
-    <span class="prefer">Re-evaluating decisions </span><span class="medium">over fear of challenging the status-quo
+    <span class="prefer">Re-evaluating decisions </span><span class="medium">over following old habbits noone knows why
       <br /></span>
   </p>
 
